--- a/src/frontend/components/AppBar/appBar.scss
+++ b/src/frontend/components/AppBar/appBar.scss
@@ -1,89 +1,34 @@
-@import './../../scss/utils/variables';
-@import './../../scss/mixins/shadow';
+@use '../../scss/mixins/breakpoint' as *;
 
 .AppBar {
-  display: flex;
   padding: 10px 25px;
   justify-content: space-between;
-  background-color: $primary-color;
-  &.dark {
-    background-color: $secondary-color;
-  }
 }
 
 .AppBar__header {
-  display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .AppBar__header--logo {
   width: 50px;
-  // width: 100px;
-  // height: 40px;
   padding: 0;
-  & img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    object-position: center;
-  }
-}
 
-.AppBar__body {
-  display: flex;
-  & .btn-link-soft,
-  & .btn-soft span:first-child {
-    font-size: $font-size-lg;
-  }
-  & .btn-soft span:last-child {
-    display: none;
-  }
-}
-
-.CoffeModal__items {
-  justify-content: space-around;
-  & button.btn-white {
-    color: $primary-color;
-    border: 1px solid rgba($black, 0.2);
-  }
-  & span.btn-icon {
-    padding-left: 5px;
-    font-size: $font-size-lg;
-  }
-}
-
-.CoffeModal__finish {
-  gap: 8px;
-  & p {
-    display: flex;
-    max-width: 300px;
-  }
-  p span {
-    padding-left: 5px;
-    font-size: $font-size-lg;
-  }
-  & button {
-    margin: 20px 0;
-  }
-}
-
-@media screen and (min-width: 375px) {
-  .AppBar__header--logo {
+  @include breakpoint('xxs') {
     width: 100px;
     height: 40px;
   }
 }
 
+// @media screen and (min-width: 375px) {
+//   .AppBar__header--logo {
+//     width: 100px;
+//     height: 40px;
+//   }
+// }
+
 @media screen and (min-width: 768px) {
   .AppBar {
     justify-content: space-around;
-  }
-
-  .AppBar__body {
-    & .btn-soft span:last-child {
-      display: flex;
-      padding-left: 5px;
-    }
   }
 }
