--- a/src/frontend/components/Footer/footer.scss
+++ b/src/frontend/components/Footer/footer.scss
@@ -1,93 +1,26 @@
-@import '../../scss/utils/variables';
-@import '../../scss/mixins/shadow';
+@use '../../scss/utils/variables' as *;
+@use '../../scss/mixins/shadow' as *;
+@use '../../scss/mixins/breakpoint' as *;
+
 
 .Footer {
-  color: $soft-color;
-  &.light {
-    @include shadow($primary-color);
-    background-color: $primary-color;
-  }
-  &.dark {
-    @include shadow($secondary-color);
-    background-color: $secondary-color;
-  }
-  margin-top: 100px;
-  padding-top: 25px;
-  &__head {
-    justify-self: center;
-    justify-items: center;
-    align-content: center;
-    text-align: center;
-    gap: 10px;
-    padding: 0 25px;
-    &--image {
-      margin: 0;
-    }
-    & a {
-      width: 100%;
-    }
-    & small {
-      font-size: $font-size-xs;
-    }
-  }
-  &__body {
-    justify-self: center;
-    width: 80%;
-    padding: 50px 0;
-  }
-  &__copyright {
-    // padding: 20px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    &.light {
-      @include shadow($secondary-color);
-      background-color: $secondary-color;
-    }
-    &.dark {
-      background-color: darken($secondary-color, 2%);
-    }
-    & a, p {
-      padding: 20px;
-    }
-  }
-  &__head--image img {
-    width: 150px;
-    height: 150px;
-    object-fit: contain;
-  }
+  @include shadow($primary-color);
+  position: relative;
+  bottom: 0;
 }
 
-@media (min-width: 500px) {
-  .Footer {
-    padding-top: 0px;
-    grid-template-columns: 1fr 1fr;
-    &__copyright {
-      grid-column-end: span 2;
-    }
-  }
-}
+.Footer__copyright {
+  @include shadow($secondary-color);
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 16px;
 
-@media (min-width: 1440px) {
-  .Footer {
-    // grid-template: 1fr auto / 0.3fr auto;
-    column-gap: 100px;
-    row-gap: 25px;
-    justify-content: center;
-    justify-items: center;
-    &__head {
-      // justify-self: flex-end;
-      // padding-left: 200px;
-      row-gap: 0;
-      padding-right: 0;
-    }
-    &__body {
-      // justify-self: flex-start;
-      padding-right: 50px;
-      width: 50%;
-    }
-    &__copyright {
-      justify-self: stretch;
-    }
+  @include breakpoint('md') {
+    grid-column-end: span 2;
+  }
+
+  @include breakpoint('lg') {
+    justify-self: stretch;
   }
 }
